package com.wallaceespindola.reportcomposer.domain;

public enum ReportJobStatus {
    REQUESTED,
    STARTED,
    COMPLETED,
    FAILED,
    RESTARTING
}
